--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "handlebars": "^4.5.3",
     "mongoose": "^5.7.8",
     "uuid": "^3.3.3"
   },
